--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
       <ul>
           <li><a href="/andrew">Andrew</a></li>
+          <li><a href="/anthony">Anthony</a></li>
+          <li><a href="/clare">Clare</a></li>
+          <li><a href="/julia">Julia</a></li>
+          <li><a href="/katie">Katie</a></li>
           <li><a href="/mike">Mike</a></li>
 
       </ul>
